# c64-assembler

./: Cargo.toml  README.md
.github/workflows/: rust.yml
c64-assembler/: Cargo.toml  README.md
c64-assembler-6502/: Cargo.toml  README.md
c64-assembler-6502/examples/: codegen_instruction_builder.rs  codegen_instruction_definitions.rs  codegen_instruction_test.rs  codegen_opcodes.rs  codegen_table.rs
c64-assembler-macro/: Cargo.toml  README.md
c64-assembler-macro/src/: lib.rs
c64-assembler/examples/: black_border_d64.rs  black_border_dasm.rs  black_border_macro.rs  black_border_program.rs  custom_macro.rs  zeropage_addresses.rs
c64-assembler/src/: lib.rs  test.rs
c64-assembler/src/builder/: application.rs  finalize.rs  function.rs  instruction.rs  mod.rs  module.rs
c64-assembler/src/generator/: dasm.rs  mod.rs  program.rs
c64-assembler/src/instruction/: mod.rs  operation.rs
c64-assembler/src/memory/: address_mode.rs  label.rs  mod.rs  user_count.rs
c64-assembler/src/validator/: address_names_exists.rs  address_names_unique.rs  mod.rs  relative_addressing.rs
c64-assembler/tests/: black_border_roundtrip.rs  dasm_generator.rs  macro_application.rs  macro_instructions.rs  program_generator.rs  relative_jump.rs  validator_addressing.rs
src/c64-assembler/: Cargo.toml
src/c64-assembler-6502/: Cargo.toml
src/c64-assembler-macro/: Cargo.toml
src/c64-assembler/src/builder/: instruction.rs
src/c64-assembler/src/generator/: dasm.rs  program.rs
