[package]
name = "c64-assembler-6502"
version = "0.1.1"
authors = ["Jeroen Bakker <jeroen@atmind.nl"]
description = "Definition of 6502 instruction set"
repository = "https://github.com/jeroenbakker-atmind/c64-assembler"
license = "GPL-3.0-or-later"
keywords = ["retro", "c64", "6502"]
categories = ["compilers", "development-tools"]
edition = "2021"

